--- a/css/home.scss
+++ b/css/home.scss
@@ -4,7 +4,7 @@
 
 	span {
 		display: inline-block;
-		border-radius: 0.75rem;
+		// border-radius: 0.75rem;
 		width: 9rem;
 		box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.3);
 	}
@@ -132,7 +132,7 @@
 		width: 9rem;
 		font-size: 1.1rem;
 		padding: 0.5em 1em;
-		border-radius: 0.75rem;
+		// border-radius: 0.75rem;
 		box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.3);
 
 		:hover {
