--- a/css/df_youtube_common.css
+++ b/css/df_youtube_common.css
@@ -1,4 +1,4 @@
-#feed, #watch7-container {
+#feed, #watch7-container, #watch7-sidebar-ads {
   display: none; }
 
 #watch7-container, #footer-container {
