--- a/css/df_youtube.css
+++ b/css/df_youtube.css
@@ -1,3 +1,6 @@
+#feed, #watch7-container, #watch7-sidebar-ads {
+  display: none; }
+
 .ad-div {
   display: none; }
 
@@ -10,6 +13,23 @@
   min-width: 854px !important;
   max-width: 854px !important; }
 
+#theater-background {
+  height: 510px !important;
+  background-color: #000 !important; }
+
+@media screen and (min-height: 870px) and (min-width: 1320px) {
+  .watch-stage-mode #content {
+    min-width: 850px;
+    width: 850px; }
+  .watch-stage-mode #player-api {
+    width: 1280px;
+    height: 750px; }
+  .watch-stage-mode #player {
+    width: 1280px !important;
+    min-width: 1280px !important;
+    max-width: 1280px !important; }
+  .watch-stage-mode #theater-background {
+    height: 750px !important; } }
 video {
   top: 0 !important;
   left: 0 !important;
@@ -17,7 +37,7 @@ video {
   height: 100% !important; }
 
 #watch7-sidebar {
-  margin-top: 0 !important;
+  margin-top: 10px !important;
   top: 0 !important; }
 
 .ad-container-single-media-element {
@@ -38,9 +58,5 @@ video {
 .controls .text-container {
   opacity: 0.5;
   display: none !important; }
-
-#theater-background {
-  height: 510px !important;
-  background-color: #000 !important; }
 
 /*# sourceMappingURL=df_youtube.css.map */
