--- a/css/df_youtube.scss
+++ b/css/df_youtube.scss
@@ -1,3 +1,17 @@
+#feed, #watch7-container, #watch7-sidebar-ads {
+	display: none;
+}
+#watch7-container, #footer-container {
+	-webkit-transform: translate3d(0,0,0);
+	-moz-transform: translate3d(0,0,0);
+	-ms-transform: translate3d(0,0,0);
+	-o-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
+
+	transition: opacity 0.5s linear;
+
+	opacity: 0;
+}
 .ad-div {
 	display: none;
 }
@@ -10,6 +24,31 @@
 	min-width: 854px !important;
 	max-width: 854px !important;
 }
+#theater-background {
+	height: 510px !important;
+	background-color: #000 !important;
+}
+//big screens
+@media screen and (min-height: 870px) and (min-width: 1320px) {
+	.watch-stage-mode {
+		#content {
+			min-width: 850px;
+			width: 850px;
+		}
+		#player-api {
+			width: 1280px;
+			height: 750px;
+		}
+		#player {
+			width: 1280px !important;
+			min-width: 1280px !important;
+			max-width: 1280px !important;
+		}
+		#theater-background {
+			height: 750px !important;
+		}
+	}
+}
 video {
 	top: 0 !important;
 	left: 0 !important;
@@ -17,7 +56,7 @@ video {
 	height: 100% !important;
 }
 #watch7-sidebar {
-	margin-top: 0 !important;
+	margin-top: 10px !important;
 	top: 0 !important;
 }
 .ad-container-single-media-element {
@@ -45,10 +84,6 @@ video {
 		opacity: 0.5;
 		display: none !important;
 	}
-}
-#theater-background {
-	height: 510px !important;
-	background-color: #000 !important;
 }
 // #watch7-sidebar-ads {
 // 	display: none;
