hide upcoming related shorts

--- a/css/hide_related_videos.css
+++ b/css/hide_related_videos.css
@@ -5,3 +5,11 @@
 .ytp-ce-video {
 	display: none !important;
 }
+
+#shorts-inner-container>ytd-reel-video-renderer:not(:first-child) {
+	display: none;
+}
+
+.navigation-container.style-scope.ytd-shorts {
+	display: none;
+}
